<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/home1">

    <Button
        android:id="@+id/button6"
        android:layout_width="160dp"
        android:layout_height="74dp"
        android:text="@string/homebutton1"
        app:backgroundTint="?android:attr/colorPressedHighlight"
        app:cornerRadius="@dimen/browser_actions_context_menu_max_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="79dp"
        android:text="@string/homebutton4"
        app:backgroundTint="@color/design_default_color_error"
        app:cornerRadius="@dimen/browser_actions_context_menu_max_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="79dp"
        android:text="@string/homebutton2"
        app:backgroundTint="@android:color/holo_red_light"
        app:cornerRadius="@dimen/browser_actions_context_menu_max_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="79dp"
        android:text="@string/homebutton3"
        app:backgroundTint="@android:color/holo_blue_light"
        app:cornerRadius="@dimen/browser_actions_context_menu_max_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        app:rippleColor="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="133dp"
        android:text="@string/hometext"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        android:textStyle="bold"
        android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>