<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductivityHomePage"
    android:background="@drawable/img12">

    <Button
        android:id="@+id/button9"
        android:layout_width="93dp"
        android:layout_height="101dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/tbutton1"
        android:textSize="10sp"
        app:backgroundTint="?attr/colorError"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/button8"
        android:layout_width="93dp"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/tbutton3"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:backgroundTint="@color/skyblue"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/button7"
        android:layout_width="93dp"
        android:layout_height="121dp"
        android:gravity="center"
        android:text="@string/tbutton2"
        android:textSize="10sp"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />
</androidx.constraintlayout.widget.ConstraintLayout>